# mir-startpack

./: .buildinfo  README.md  bibliography.html  genindex.html  home.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg
_sources/: bibliography.md
_sources/inst_clas/: Copy_End_to_end_classification.ipynb
inst_clas/: End_to_end_classification.html  Feature_extraction_classification.html  Mridangam_dataset.html  intro.html  methods.html
source/: _config.yml  _toc.yml  home.md  references.bib
source/_build/.doctrees/: bibliography.doctree  environment.pickle  home.doctree
source/_build/.doctrees/inst_clas/: Copy_End_to_end_classification.doctree  End_to_end_classification.doctree  Feature_extraction_classification.doctree  Mridangam_dataset.doctree  intro.doctree  methods.doctree
source/_build/html/: bibliography.html  genindex.html  home.html  objects.inv  search.html  searchindex.js
source/_build/html/_sources/: bibliography.md  home.md
source/_build/html/_sources/inst_clas/: End_to_end_classification.ipynb  Feature_extraction_classification.ipynb  intro.md  methods.md
source/_build/html/inst_clas/: Copy_End_to_end_classification.html  Feature_extraction_classification.html  Mridangam_dataset.html  intro.html  methods.html
source/_build/jupyter_execute/inst_clas/: Copy_End_to_end_classification.ipynb  Copy_End_to_end_classification.py  End_to_end_classification.ipynb  End_to_end_classification.py  Feature_extraction_classification.ipynb  Feature_extraction_classification.py  Mridangam_dataset.ipynb  Mridangam_dataset.py
source/inst_clas/: Feature_extraction_classification.ipynb  Mridangam_dataset.ipynb  intro.md  methods.md
