[metadata]
name = mir-starting-pack
version = 0.1.0
description = Music Information Retrieval Starting Pack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nkundiushuti/mir-startpack
author = Executable Book Project
author_email = marius.miron@upf.edu
license = GNU AFFERO GENERAL PUBLIC LICENSE
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Artistic Software
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Software Development :: Libraries
keywords =
    reproducible
    science
    environments
    audio
    music technology
    signal processing
    notebook
project_urls =
    Documentation = https://github.com/nkundiushuti/mir-startpack
    Source = https://github.com/nkundiushuti/mir-startpack
    Tracker = https://github.com/nkundiushuti/mir-startpack/issues

[options]
packages = find:
install_requires =
    essentia
    mirdata
    numpy
    sklearn
    matplotlib
    jupyter-book
    jupyterlab
    numpydoc
    pyyaml
    importlib_metadata;python_version < "3.7"
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    jb = mir-starting-pack.cli.main:main
    jupyter-book = mir-starting-pack.cli.main:main

